<resources>
    <string name="app_name">玩安卓</string>
    <string name="mail_txt">12345678@qq.com</string>
    <string name="name_txt">smail</string>
    <string name="sign_text">点击登录</string>
    <string name="welcome">欢迎您</string>
    <string name="favorites">收藏</string>
    <string name="about">关于</string>
    <string name="share">分享</string>
    <string name="first_Bar">主页</string>
    <string name="second_Bar">项目</string>
    <string name="third_Bar">动态</string>
    <string name="fourth_Bar">体系</string>

    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="login_register">注册</string>
    <string name="login_login">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="go_singn">去注册?</string>
    <string name="go_login">去登录?</string>

    <string name="listtitle">标题</string>
    <string name="description">描述</string>
    <string name="auther">作者</string>
    <string name="times">时间</string>
    <string name="hasmore">正在加载更多数据</string>

</resources>