<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Large">

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_username"
            android:maxEms="20"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        app:hintTextAppearance="@style/TextAppearance.AppCompat.Large">

        <EditText
            android:id="@+id/loginPasswrod"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_shape"
        android:text="@string/login_login" />

    <TextView
        android:id="@+id/loginGoReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/go_singn"
        android:textColor="#30CCF3" />


</LinearLayout>